--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -21,18 +21,18 @@
   </div>
 </div>
 
+
+
 <div class="contain mt-3 mb-5 p-4">
 
-  <div class="row">
+  <div class="row mt-4">
     <h5 class="text-white">Trending Movies</h5>
     <div class="rowposter mt-3 p-2">
-      <ng-container *ngFor="let t of trendingMovieResult">
-        <img src="https://image.tmdb.org/t/p/original/{{ t.poster_path }}" class="rowimg largeposter" alt="..."
-          >
+      <ng-container *ngFor="let a of actionMovieResult">
+        <img src="https://image.tmdb.org/t/p/original/{{ a.poster_path }}" class="rowimg largeposter" alt="..."
+        >
       </ng-container>
-
     </div>
-
   </div>
 
   <div class="row mt-4">
@@ -42,9 +42,7 @@
         <img src="https://image.tmdb.org/t/p/original/{{ a.poster_path }}" class="rowimg largeposter" alt="..."
         >
       </ng-container>
-
     </div>
-
   </div>
 
   <div class="row mt-4">
@@ -54,9 +52,20 @@
         <img src="https://image.tmdb.org/t/p/original/{{ a.poster_path }}" class="rowimg largeposter" alt="..."
         >
       </ng-container>
-
     </div>
-
   </div>
 
+  <div class="row mt-4">
+    <h5 class="text-white">adventure Movies</h5>
+    <div class="rowposter mt-3 p-2">
+      <div >
+        <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJoqjHp_NcxEgRFrFHmk1azvIRgroYf_vPx_DAVag9jHaKVl3I3RP6BdgJwwPijcFoYpQ&usqp=CAU' class="img" alt="..."
+        >
+      </div>
+      <div >
+        <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSytFu5Fp-sMaqLJzVZ8ZTk9WsugtNeWn7dX2aMWqOKnsOYECRGdLTGJrenE9dDAQiT4ow&usqp=CAU' class="img" alt="..."
+        >
+      </div>
+    </div>
+  </div>
 </div>
